--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Homer simpson - Site page
+title: Homer simpson - Site page.
 description: This is a site page for Homer Simpson
